--- a/Entregables/SegundoEntregable/package.json
+++ b/Entregables/SegundoEntregable/package.json
@@ -8,5 +8,15 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "http": "^0.0.1-security",
+    "knex": "^2.4.2",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.6.0",
+    "sqlite3": "^5.1.4"
+  }
 }
