--- a/Entregables/SegundoEntregable/package.json
+++ b/Entregables/SegundoEntregable/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "firebase-admin": "^11.5.0",
     "hbs": "^4.2.0",
     "http": "^0.0.1-security",
     "knex": "^2.4.2",
     "moment": "^2.29.4",
+    "mongoose": "^6.9.1",
     "mysql": "^2.18.1",
     "socket.io": "^4.6.0",
     "sqlite3": "^5.1.4"
