--- a/desafio9/package.json
+++ b/desafio9/package.json
@@ -18,6 +18,7 @@
     "knex": "^2.4.2",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.6.0",
     "sqlite3": "^5.1.4"
   }
